# hunter-crud

./: .gitignore  Caddyfile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows(disabled)/: main.yml
config/: .env.sample
docker/: Dockerfile
hunter-crud/: .env.sample  manage.py  pyproject.toml  setup.cfg
hunter-crud/api/: models.py  serializers.py  urls.py  views.py
hunter-crud/api/migrations/: 0001_initial.py
hunter-crud/huntercrud/: asgi.py  logging.py  urls.py  wsgi.py
hunter-crud/huntercrud/settings/: base.py  dev.py  prod.py  staging.py
hunter-crud/services/hunter/: client.py  config.py
hunter-crud/services/hunter/models/: emails.py
hunter-crud/services/hunter/services/: base.py  emails.py
scripts/: entrypoint.sh
